kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: share-fair
  labels:
    app.kubernetes.io/name: share-fair
    app.kubernetes.io/part-of: share-fair
